v0.1.5-beta/_sources/docs/Project/Exploring_Projects.md.txt
# Exploring Projects

The **Projects** section in Data Catalog is designed to help you manage research projects efficiently. It includes two main views:

* **Project List Page**, where you can search, and create new projects.
* **Project Home Page**, where you manage the details of a specific project, including metadata, linked datasets, and the Data Management Plan (DMP).



## ➤ Project List Page

This is the starting point for navigating all research projects. 

### ➣ Key Features of the Project List Page
From the Project List Page, you can:

* **Search** 

    * Use the search bar to find specific projects.

* **Create new Project**

    * Click the `Add a new project` button to start creating a new research project.

* **View Active & Archived Projects**

    * Use the tabs at the top of the page to switch between active and archived projects, for better organization and visibility.

    <br/>


```{tip}
The **Search** bar is available throughout the platform, so you can easily find projects and datasets from different views.
```


-------------------------------------------------

## ➤ Project Home Page

The **Project Home Page** in Data Catalog is the central place to view and manage everything related to a specific research project. It brings together all the essential information such as:

   * Metadata
   * Datasets
   * Permissions
   * <span style="color:#999999">History (coming soon)</span>
   * Data Management Plan (DMP)
   * Seqera (WIP - work in progress)

for a specific project, into one organized interface.

```{note}
The **History** feature is currently visible but not active. It will be available soon, allowing you to view project activity.
```


### Inside the Project Home Page

Once you open a project, you will land on its home page. This page is structured into several key areas to help you explore and manage project details.

#### ➣ Project Title & Description

At the top of the page, there is the title and a short description of the project to help you quickly understand its purpose or scope.

#### ➣ Key Features of the Project Home Page

Just below the description, several key features are displayed:


* **Metadata**: 
    * This section includes the list of all the project details (metadata) entered during project creation.

* **Datasets**: 
    * Here are listed all datasets added to the project.
    * You can view dataset details, create new ones, or add existing datasets.

        (see also: {ref}`Datasets-tab`)

* **Permissions**:
    * This section shows all users who have access to the project.
    * Here project creators can manage (add/remove) users and assign permissions:
        * Can Read: Allows the user to view the project's metadata and associated datasets (view‑only)
        * Can Edit Permissions: Allows managing user access and permissions
        * Can Edit Metadata: Allows editing project details and the project's DMP (Data Management Plan)
        * Can Add Datasets: Allows adding datasets to the project, either by creating new or adding (and removing) existing ones
        * Can Archive: Allows Archiving the project 
        * Can Setup Workspaces: Allows running analysis pipelines on the dataset's files

            (see also: {ref}`manage-project-user-permissions`) 

*   <span style="color:#999999">**History**:</span>
    * <span style="color:#999999">Shows a log of changes made to the project.</span>
    * <span style="color:#999999">Useful for tracking updates.</span>

* **Data Management Plan (DMP)**:
    * Provides an overview of how data will be handled throughout the project lifecycle.
    * Allows you to document policies for data storage, sharing, and preservation.

* **Seqera (WIP)**:
    * Displays all Seqera workspaces created from datasets linked to this project.
    * From here you can manage existing workspaces.

        (see also: {ref}`Manage Seqera Workspace`)


    <br/>

-------------------------------

<br/>

```{raw} html
<div style="text-align: center;">
  <iframe 
    width="93%" 
    height="500" 
    src="https://youtube.com/embed/UTjEH8SOLUo"
    title="Exploring Project home page"
    frameborder="0" 
    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
    allowfullscreen>
  </iframe>
  <p><em>Exploring Project home page</em></p>
</div>
```
----------------------------

<br/>


```{note}
→ You can edit the project details directly in the **Metadata** section. Just click the **`Edit metadata`** button located at the ***top*** of that section.

→ If the project is finished or terminated, you can archive it by clicking the **`Archive`** button, located on the ***top-right corner*** of the project home page.

→ You can always restore an archived project at anytime.
```